--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "chart.js": "^4.4.2",
     "lucide-react": "^0.378.0",
     "react": "^18.2.0",
